# azure-iot-c-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  iot_sample.h.in  main.c  main.cpp
inc/: iot_sample.h.in
lib/: CMakeLists.txt
src/: iothub_sample.cpp  main.cpp
